--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderActivity"
-                android:label= "Order Activity"
+        <activity
+            android:name=".OrderActivity"
+            android:label="Order Activity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />></activity>
+                android:value=".MainActivity" />
+            >
+        </activity>
+        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
